welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:4: error: ']' expected but ')' found.
	var z = Math.abs [b - c)
                               ^