welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
	var x = Math.abs (a - b)
	var y = Math.abs (a - c)
	var z = Math.abs [b - c)
	if (9<x || 9<y || 9<z){
		return true
	}else{
		return false
	}
}
